more FR goofs - fixed overflow value

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -100,7 +100,7 @@ textarea {
 .image-replace {
     background-color: transparent;
     border: 0;
-    overflow: removed;
+    overflow: hidden;
     /* IE 6/7 fallback */
     *text-indent: -9999px;
 }
@@ -130,7 +130,7 @@ textarea {
     clip: rect(0 0 0 0);
     height: 1px;
     margin: -1px;
-    overflow: removed;
+    overflow: hidden;
     padding: 0;
     position: absolute;
     width: 1px;
